--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "6",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swiper": "^8.2.6"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
